Updates to podcast with shownotes everywhere!

--- a/en/_posts/2018-10-29-thepodcast-158.md
+++ b/en/_posts/2018-10-29-thepodcast-158.md
@@ -1,13 +1,11 @@
 ---
-tags: [podcast]
+tags: [podcast,video]
 vid: "pVdvIIfwxyc"
 ---
 
 # The Podcast #158 - Sabbatical
 
 Also back in September on [The Podcast][p] we discussed my 6-workweek sabbatical - first time ever when I disconnected from [Nozbe][n] (the company) for such a long time - which is really hard for a founder and CEO. Here are the details (also on video!)
-
-## [Watch this episode on video:](https://www.youtube.com/watch?v=pVdvIIfwxyc)
 
 {% include video.html id=page.vid %}
 
