--- a/en/_posts/2018-12-01-thepodcast-167.md
+++ b/en/_posts/2018-12-01-thepodcast-167.md
@@ -25,16 +25,25 @@ Time: ~ 50 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/167
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Scanbot](https://scanbot.io/en/index.html)
+  * [I tried to edit an ENTIRE video on iPad Pro...](https://www.youtube.com/watch?v=-ZpsliNmJLo)
+  * [LumaFusion](https://luma-touch.com/lumafusion-for-ios/)
+  * [Working Copy app](https://workingcopyapp.com/)
+  * [My Markdown Writing and Collaboration Workflow, Powered by Working Copy 3.6, iCloud Drive, and GitHub](https://www.macstories.net/ios/my-markdown-writing-and-collaboration-workflow-powered-by-working-copy-3-6-icloud-drive-and-github/)
+  * [How the iPad Pro is CHANGING music production](https://www.youtube.com/watch?v=dItCj676GmA)
+  * [Getting the iPad to Pro](https://craigmod.com/essays/ipad_pro/)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/167
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
