--- a/en/_posts/2018-12-07-thepodcast-168.md
+++ b/en/_posts/2018-12-07-thepodcast-168.md
@@ -25,16 +25,26 @@ Time: ~ 45 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/168
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Podcast 105: Twitter detox](https://thepodcast.fm/105)
+  * [The Podcast 106: Combined Twitter&Instagram Moment](https://thepodcast.fm/106)
+  * [The Podcast 47: Quit social media](https://thepodcast.fm/episodes/47)
+  * [The Podcast 141: Nozbe at Nozbe ](https://thepodcast.fm/141)
+  * [Instagram workflow](https://workflow.is/workflows/b0a79219594c468ea7537cf18f2572cf) ([web version](http://radex.io/instagram.html))
+  * [SelfControl](https://selfcontrolapp.com/)
+  * [1blocker](https://1blocker.com/)
+  * [This is Marketing by Seth Godin](https://www.amazon.com/This-Marketing-Cant-Until-Learn/dp/0525540830/) ([audible](https://www.audible.com/pd/This-Is-Marketing-Audiobook/B07DKSPL43))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/168
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
