--- a/en/_posts/2019-01-13-thepodcast-171.md
+++ b/en/_posts/2019-01-13-thepodcast-171.md
@@ -25,16 +25,32 @@ Time: ~ 44 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/171
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Podcast 158: Sabbatical](https://thepodcast.fm/episodes/158)
+  * [The Podcast 137: Nomadic lifestyle](https://thepodcast.fm/episodes/137)
+  * [The Podcast 162: Backpack Only](https://thepodcast.fm/episodes/162)
+  * [The Podcast 96: Working while traveling](https://thepodcast.fm/96)
+  * [Piątek, piąteczek, piątunio. W tej firmie to dzień wolny od bieżącej pracy](https://msp.money.pl/wiadomosci/zarzadzanie/artykul/piatek-piateczek-piatunio-w-tej-firmie-to,176,0,2418096.html)
+  * [Ironman 70.3 Gdynia](https://www.ironmangdynia.pl/)
+  * [watermelonDB](https://github.com/Nozbe/WatermelonDB)
+  * [The E-Myth Revisited](https://www.amazon.com/Myth-Revisited-Small-Businesses-About/dp/B00094F0ES/) ([audible](https://www.audible.com/pd/The-E-Myth-Revisited-Audiobook/B002V1LGZE))
+  * [Profit First](https://www.amazon.com/Profit-First-Transform-Cash-Eating-Money-Making/dp/B06X15WW79/) ([audible](https://www.audible.com/pd/Profit-First-Audiobook/B06X15WX5B))
+  * [Finansowy Ninja](https://finansowyninja.pl/)
+  * [Duolingo](https://www.duolingo.com/)
+  * [2018 in numbers (Radex)](https://twitter.com/radexp/status/1083038025851043840)
+  * [2018 review - an ongoing personal and business development](https://sliwinski.com/2018/)
+  * [Photo of new space rocket](https://forum.nasaspaceflight.com/index.php?action=dlattach;topic=47120.0;attach=1538238;image)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/171
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
