--- a/en/_posts/2019-04-04-thepodcast-182.md
+++ b/en/_posts/2019-04-04-thepodcast-182.md
@@ -7,7 +7,7 @@ vid: "rVlNwOv_wp0"
 
 This week on [The Podcast][p] we talk about WHY we’ve decided to launch [Nozbe 4](https://Nozbe.com/4) today and why it’s a big deal for the future of our company.
 
-Watch this short teaser and listen to the entire episode below:
+Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +23,22 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/182
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Nozbe 4](https://nozbe4.com/)
+  * [The Podcast 181: The Deadline](https://thepodcast.fm/episodes/181)
+  * [Nozbe 3 and business plans](https://nozbe.com/blog/nozbe3/)
+  * [Digital Minimalism](https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/B07LGDY5PC/) ([audible](https://www.audible.com/pd/Digital-Minimalism-Audiobook/B07LGF8TCJ))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/182
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
