--- a/en/_posts/2019-04-19-thepodcast-183.md
+++ b/en/_posts/2019-04-19-thepodcast-183.md
@@ -5,9 +5,7 @@ vid: "XgtS75NrbH8"
 
 # The Podcast #183 - N is 4 Nozbe
 
-This week on [The Podcast][p] we met in person on [Nozbe Reunion](https://sliwinski.com/reunion) and discussed the new [Nozbe 4](https://nozbe.com/) branding and logo... and the process and discussions (and fighting!) behind it.
-
-Watch the full video or listen to audio:
+This week on [The Podcast][p] we met in person on [Nozbe Reunion](https://sliwinski.com/reunion) and discussed the new [Nozbe 4](https://michael.gratis/nozbe) branding and logo... and the process and discussions (and fighting!) behind it. Watch it on video:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +21,24 @@ Watch the full video or listen to audio:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/183
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Nozbe 4 Logo](https://www.dropbox.com/s/gyh06r0ajjo6im8/Captura%20de%20pantalla%202019-04-17%20a%20las%2016.09.05.png?dl=0)
+  * [New Nozbe stickers and coasters](https://www.instagram.com/p/BwIIrNiluFS/)
+  * [Nozbe 4 Logo coaster (3D model)](https://www.thingiverse.com/thing:3570295)
+  * [Logos with tick](https://www.dropbox.com/s/l459xuff54vw419/Captura%20de%20pantalla%202019-04-17%20a%20las%2016.09.44.png?dl=0) ([Play Store](https://www.dropbox.com/s/92b4v2pidq9ppmf/IMG_0470.JPG?dl=0))
+  * [The Courage To Be Disliked by Ichiro Kishimi and Fumitake Koga](https://www.amazon.com/Courage-Be-Disliked-yourself-happiness-ebook/dp/B074TWG8V7/) ([audible](https://www.audible.com/pd/The-Courage-to-Be-Disliked-Audiobook/B07BRPQ8LW))
+  * [Digital Minimalism by Cal Newport](https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/0525536515) ([audible](https://www.audible.com/pd/Digital-Minimalism-Audiobook/B07LGF8TCJ))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/183
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
