--- a/en/_posts/2019-05-22-thepodcast-187.md
+++ b/en/_posts/2019-05-22-thepodcast-187.md
@@ -5,9 +5,7 @@ vid: "xdII5rDrIpo"
 
 # The Podcast #187 - Camino
 
-This week on [The Podcast][p] we discuss the pilgrimage of the Camino de Santiago which I did earlier this month with my wife to [celebrate our 40](/forty/) - and Radek had lots of questions! Listen up:
-
-Watch this short teaser and listen to the entire episode below:
+This week on [The Podcast][p] we discuss the pilgrimage of the Camino de Santiago which I did earlier this month with my wife to [celebrate our 40](/forty/) - and Radek had lots of questions! Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +21,30 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/187
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Camino De Santiago on Wikipedia](https://en.wikipedia.org/wiki/Camino_de_Santiago)
+  * [Photo of Michaels backpack](https://files.nozbe.com/images/michael-backpack-camino.JPG)
+  * [Hiking zip-off pants](https://www.decathlon.com/products/mens-mountain-hiking-zip-off-pants-mh150)
+  * [Apple Watch Charger (0.3 m)](https://www.apple.com/shop/product/MU9J2AM/A/apple-watch-magnetic-charging-cable-03m)
+  * [AirPods](https://www.apple.com/airpods/)
+  * [DivineOffice.org](https://divineoffice.org/)
+  * [The Podcast 162: Backpack Only](https://thepodcast.fm/episodes/162)
 
-[pm]: http://productivemag.com/
+## Picks:
+
+  * [Mistakes Were Made (But Not By Me)](https://www.amazon.com/Mistakes-Were-Made-But-Not/dp/B003ZWZE5G/) ([audible](https://www.audible.com/pd/Mistakes-Were-Made-But-Not-By-Me-Audiobook/B003XSSVNE))
+  * [Black Box Thinking](https://www.amazon.com/Black-Box-Thinking-Surprising-Success/dp/B00WKJV92M/) ([audible](https://www.audible.com/pd/Black-Box-Thinking-Audiobook/B0161R2O7W))
+
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/187
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
