--- a/en/_posts/2019-05-31-thepodcast-188.md
+++ b/en/_posts/2019-05-31-thepodcast-188.md
@@ -5,9 +5,7 @@ vid: "0m6Xe10k1JM"
 
 # The Podcast #188 - Michael 4.0
 
-This week on [The Podcast][p] we discuss me turning [forty](https://sliwinski.com/forty) and as I’ve reached this milestone you’ll have me trying to share some words of wisdom.
-
-Watch this short teaser and listen to the entire episode below:
+This week on [The Podcast][p] we discuss me turning [forty](/forty/) and as I’ve reached this milestone you’ll have me trying to share some words of wisdom. Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +21,29 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/188
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [WWDC 2019](https://developer.apple.com/wwdc19/)
+  * [Nozbe 4](https://nozbe.com/4)
+  * [BOOK: It's all about Passion!](https://sliwinski.com/passion/)
+  * [The Podcast 123: So Good They Can’t Ignore You](https://thepodcast.fm/episodes/123)
+  * [The Podcast 148: Don’t spend it all](https://thepodcast.fm/episodes/148)
+  * [The Podcast 187: Camino](https://thepodcast.fm/episodes/187)
+  * [So Good They Can't Ignore You](https://www.amazon.com/Good-They-Cant-Ignore-You-ebook/dp/B01KFR64LQ/) ([audible](https://www.audible.com/pd/So-Good-They-Cant-Ignore-You-Audiobook/B01LZ5KC7W))
 
-[pm]: http://productivemag.com/
+## Picks:
+
+  * [Artificial Intelligence Podcast](https://lexfridman.com/ai/)
+
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/188
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
