--- a/en/_posts/2019-07-03-thepodcast-189.md
+++ b/en/_posts/2019-07-03-thepodcast-189.md
@@ -1,13 +1,11 @@
 ---
-tags: [podcast, video]
+tags: [podcast,video]
 vid: "Iqn99FI3Gek"
 ---
 
 # The Podcast #189 - Dub dub
 
 Last month on [The Podcast][p] we once again met live with Radek on Apple’s Developer conference WWDC and we actually used Apple’s Podcasting studio to record our show... which was a geek-out exchange about all the new stuff Apple has presented on the conference. This time you may both watch or listen to the entire episode right here, so enjoy:
-
-## Watch the full video or listen to audio:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +21,28 @@ Last month on [The Podcast][p] we once again met live with Radek on Apple’s De
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/189
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [WWDC 2019](https://developer.apple.com/wwdc19/)
+  * [Nozbe 4: The future of better teamwork](https://nozbe.com/4/)
+  * [Readdle](https://readdle.com/)
+  * [Documents by Readdle](https://readdle.com/documents)
+  * [Connected podcast #246: The Ultimate Dark Mode is a Crash (live from WWDC)](https://www.relay.fm/connected/246)
+  * [Automators podcast](https://www.relay.fm/automators)
+  * [David Sparks on Twitter](https://twitter.com/macsparky)
+  * [Bear app](https://bear.app/)
+  * [How intermittent journaling and some smart Siri shortcuts help me enjoy more intentional and productive days](https://sliwinski.com/journaling/)
+  * [Rene Ritchie on Twitter](https://twitter.com/reneritchie)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/189
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
