--- a/en/_posts/2019-07-23-thepodcast-190.md
+++ b/en/_posts/2019-07-23-thepodcast-190.md
@@ -5,9 +5,7 @@ vid: "q71GfJ-yUm0"
 
 # The Podcast #190 - Webmaster is back!
 
-Recently on [The Podcast][p] I explained how I became “the webmaster” and launched not 1, not 2 but 3 web site projects. One for my children’s parents association, one for Nozbe team internally and new, Medium-free [NoOffice.org](https://nooffice.org). And we decided to take a break from podcasting for the summer. Listen up and talk to you in September:
-
-Watch this short teaser and listen to the entire episode below:
+Recently on [The Podcast][p] I explained how I became “the webmaster” and launched not 1, not 2 but 3 web site projects. One for my children’s parents association, one for Nozbe team internally and new, Medium-free [NoOffice.org](https://nooffice.org). And we decided to take a break from podcasting for the summer. Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +21,36 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/190
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Watermelon CMS](https://github.com/radex/watermelon)
+  * [watermelonDB](https://github.com/Nozbe/WatermelonDB)
+  * [GitHub](https://github.com/)
+  * [Ai Writer](https://ia.net/writer)
+  * [Working Copy](https://workingcopyapp.com/)
+  * [Federico Viticci on Twitter](https://twitter.com/viticci)
+  * [My Markdown Writing and Collaboration Workflow, Powered by Working Copy 3.6, iCloud Drive, and GitHub](https://www.macstories.net/ios/my-markdown-writing-and-collaboration-workflow-powered-by-working-copy-3-6-icloud-drive-and-github/)
+  * [Dropbox Paper](https://www.dropbox.com/paper)
+  * [Vimeo](https://vimeo.com/)
+  * [Wordpress.org](https://wordpress.org/)
+  * [Jekyll - Simple, blog-aware, static sites](https://jekyllrb.com/)
+  * [Nozbe.help](https://help.nozbe.com/)
+  * [nooffice.org](https://nooffice.org/?gi=ad56dd964996)
+  * [PSPDFKit: A Complete PDF Solution You Can Rely On](https://pspdfkit.com/)
+  * [The Podcast 184: Digital Minimalism](https://thepodcast.fm/episodes/184)
+  * [Digital Minimalism](https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/B07LGDY5PC/) ([audible](https://www.audible.com/pd/Digital-Minimalism-Audiobook/B07LGF8TCJ))
+  * [CGP Grey on Youtube](https://www.youtube.com/user/CGPGrey/videos)
+  * [The Podcast Table of Contents](https://thepodcast.fm/toc)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/190
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
