--- a/en/_posts/2019-10-11-thepodcast-191.md
+++ b/en/_posts/2019-10-11-thepodcast-191.md
@@ -5,9 +5,7 @@ vid: "XWu3PuN5N80"
 
 # The Podcast #191 - Summer's Gone
 
-We’re back! After a 3-month hiatus we’re doing a quick re-cap of all the things that happened in our lives between our [The Podcast][p] recordings and from today on we’ll be back on a regular bi-weekly schedule. Many of the things we discussed today will be full-length episodes in the future, so make sure to let me know what you want us to discuss first!
-
-Watch this short teaser and listen to the entire episode below:
+We’re back! After a 3-month hiatus we’re doing a quick re-cap of all the things that happened in our lives between our [The Podcast][p] recordings and from today on we’ll be back on a regular bi-weekly schedule. Many of the things we discussed today will be full-length episodes in the future, so make sure to let me know what you want us to discuss first! Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +21,34 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a bi-weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/191
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [ChainReactConf](https://infinite.red/ChainReactConf)
+  * [Chain React 2019 - Radek Pietruszewski - Successful Web & React Native Code Sharing Strategies](https://www.youtube.com/watch?v=KxSwRHi4lHk)
+  * [React Native EU](https://react-native.eu/)
+  * [React Native EU 2019: Radek Pietruszewski - Successful Web & React Native Code Sharing Strategies](https://www.youtube.com/watch?v=ryMvNklnDjU)
+  * [Nozbe Teams](https://nozbe.com/teams)
+  * [ZACS (zero abstraction cost styling)](https://github.com/Nozbe/zacs)
+  * [nooffice.org](https://nooffice.org/)
+  * [Working Copy app](https://workingcopyapp.com/)
+  * [Textastic app](https://www.textasticapp.com/)
+  * [Why reading the same book again (or several times in life) is OK](https://sliwinski.com/again/)
+  * [Essentialism: The Disciplined Pursuit of Less](https://www.amazon.com/Essentialism-Disciplined-Pursuit-Greg-McKeown/dp/0753555166/) ([Audible](https://www.audible.com/pd/Essentialism-Audiobook/B017TDXG3S))
+  * [The Subtle Art of Not Giving a F*ck](https://www.amazon.com/Subtle-Art-Not-Giving-Counterintuitive/dp/B01I29Y344/) ([Audible](https://www.audible.com/pd/The-Subtle-Art-of-Not-Giving-a-F-ck-Audiobook/B01I28NFEE))
+  * [Why We Get Fat: And What to Do About It](https://www.amazon.com/Why-We-Get-Fat-About/dp/B004HFK0H2/) ([Audible](https://www.audible.com/pd/Why-We-Get-Fat-Audiobook/B004D5K512))
+  * [No Ironman - how I blew my dream because I was... late](https://sliwinski.com/noiron/)
+  * [Super Pumped: The Battle for Uber](https://www.amazon.com/Super-Pumped-Battle-Uber/dp/B07RT152TJ/) ([Audible](https://www.audible.com/pd/Super-Pumped-Audiobook/B07RV4JLHJ))
+  * [Pretty Lights - Summer's gone](https://www.youtube.com/watch?v=agMmGoJW5bQ)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/191
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
