--- a/en/_posts/2019-10-23-thepodcast-192.md
+++ b/en/_posts/2019-10-23-thepodcast-192.md
@@ -5,9 +5,7 @@ vid: "rT934lUMl28"
 
 # The Podcast #192 - Corrupted System
 
-This week on [The Podcast][p] we completely went off script and instead of talking about [Nozbe Teams](https://nozbe.com/teams) Radek started complaining about fashion industry and it all went downhill from there... but I think you’ll gonna love it. Check it out!
-
-Watch this short teaser and listen to the entire episode below:
+This week on [The Podcast][p] we completely went off script and instead of talking about [Nozbe Teams](https://michael.gratis/nozbeteams) Radek started complaining about fashion industry and it all went downhill from there... but I think you’ll gonna love it. Check it out! Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +21,24 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/192
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Jak Oszczędzać Pieniądze](https://jakoszczedzacpieniadze.pl/) - polish blog about saving money
+  * [Zalando](https://www.zalando.pl/)
+  * [The Podcast 162: Backpack Only](https://thepodcast.fm/episodes/162)
+  * [Fiallraven backpacks](https://www.fjallraven.eu/equipment/backpacks-bags/)
+  * [Fiallraven ULVÖ 23](https://www.fjallraven.com/us/en-us/bags-gear/ulvo-23)
+  * [Corrupted System by Taiwan MC](https://soundcloud.com/taiwanmc/liquid-wicked-featuring-3)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/192
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
