--- a/en/_posts/2019-12-09-thepodcast-195.md
+++ b/en/_posts/2019-12-09-thepodcast-195.md
@@ -21,16 +21,33 @@ We met again on [Nozbe Reunion](https://sliwinski.com/reunion) and recorded [The
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/195
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * The Podcast episodes from Nozbe reunions (video versions):
+    * [The Podcast 91: Best City](https://www.youtube.com/watch?v=cyFnU_RrwaE)
+    * [The Podcast 116: App of the Reunion](https://www.youtube.com/watch?v=peaTqYeJUBw)
+    * [The Podcast 141: Nozbe at Nozbe](https://www.youtube.com/watch?v=jmD5_2EZfwo)
+    * [The Podcast 162: Backpack Only](https://www.youtube.com/watch?v=REiRR0_0V1Y)
+    * [The Podcast 183: N is 4 Nozbe](https://www.youtube.com/watch?v=XgtS75NrbH8)
+  * [Photo of HDF phone stand](https://mobile.twitter.com/radexp/status/1200731414087524352)
+  * [Living Hinge Phone Stand](https://www.thingiverse.com/thing:4002952)
+  * [luftdaten](https://luftdaten.info/en/home-en/)
+  * [BoCzemuNie?](https://boczemunie.pl/)
+  * [USB-C to HDMI cable](https://www.amazon.com/CableCreation-Thunderbolt-Compatible-MacBook-Chromebook/dp/B06XDMKQKJ/)
+  * [Ugreen velcro](https://pl.aliexpress.com/item/32950071042.html)
+  * [Apple Watch powerbank](https://pl.aliexpress.com/item/4000222145665.html)
+  * [Hyperdrive dock](https://www.hypershop.com/collections/usb-c-hubs/products/hyperdrive-6-in-1-hub-for-ipad-pro-2018?variant=19332717412414)
+  * [Hyperdrive 100W charger](https://www.kickstarter.com/projects/hypershop/hyperjuice-worlds-first-and-smallest-100w-gan-charger/)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/195
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
