--- a/en/_posts/2019-12-20-thepodcast-196.md
+++ b/en/_posts/2019-12-20-thepodcast-196.md
@@ -21,16 +21,27 @@ This week on [The Podcast][p] we discuss how “getting our hands dirty” by cr
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/196
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Podcast 152: Power to the people](https://thepodcast.fm/152)
+  * [IKEA Hackers](https://www.ikeahackers.net/)
+  * [Warsaw Hackerspace](https://hackerspace.pl/)
+  * [Radek’s Lasercut box](https://mobile.twitter.com/radexp/status/1200731067919085568)
+  * [Fixing Bridgeport - thread](https://mobile.twitter.com/radexp/status/1202893000243896320)
+  * [Bridgeport](https://en.wikipedia.org/wiki/Bridgeport_\(machine_tool_brand\))
+  * [Radek’s concrete castings - thread](https://mobile.twitter.com/radexp/status/1207651753790967810)
+  * [My good old iPad 3 retina - the 2012 tablet that made me go #iPadOnly - is now on my wall and it works great!](https://sliwinski.com/ipad3)
+  * [Digital Minimalism](https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/0525536515/) ([audible](https://www.audible.com/pd/Digital-Minimalism-Audiobook/B07LGF8TCJ))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/196
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
