--- a/en/_posts/2020-01-19-thepodcast-198.md
+++ b/en/_posts/2020-01-19-thepodcast-198.md
@@ -21,16 +21,46 @@ This week on [The Podcast][p] we take on annual review again - why it’s import
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/198
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Nozbe Teams](https://nozbe.com/teams/)
+  * The Podcast episodes mentioned:
+    * [170: Live intentionally](https://thepodcast.fm/170)
+    * [127: Burst Projects vs Keystone Habits](https://thepodcast.fm/127)
+    * [128: Values](https://thepodcast.fm/128)
+    * [129: Letting go](https://thepodcast.fm/129)
+    * [130: 2017 Highlights](https://thepodcast.fm/130)
+    * [131: Singular Focus of 2018](https://thepodcast.fm/131)
+    * [82: Planning 2017](https://thepodcast.fm/82)
+    * [85: Magic Spreadsheet](https://thepodcast.fm/85)
+    * [146: Magic of Tidying Up](https://thepodcast.fm/146)
+    * [184: Digital Minimalism](https://thepodcast.fm/episodes/184)
+    * [109: Workflow to the rescue](https://thepodcast.fm/109)
+    * [151: Nozbe: Automated](https://thepodcast.fm/episodes/151)
+  * Books mentioned:
+    * [Essentialism: The Disciplined Pursuit of Less](https://www.amazon.com/Essentialism-Disciplined-Pursuit-Greg-McKeown/dp/0804137382/) ([audible](https://www.audible.com/pd/Essentialism-Audiobook/B00IWZ6XGA))
+    * [Digital Minimalism: Choosing a Focused Life in a Noisy World](https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/0525536515/) ([audible](https://www.audible.com/pd/Digital-Minimalism-Audiobook/B07LGF8TCJ))
+    * [F**k It: The Ultimate Spiritual Way](https://www.amazon.com/F-k-Ultimate-Spiritual-Way/dp/1401945996/) ([audible](https://www.audible.com/pd/F-k-It-Audiobook/B00IFLFF2Y))
+    * [The Subtle Art of Not Giving a F*ck: A Counterintuitive Approach to Living a Good Life](https://www.amazon.com/Subtle-Art-Not-Giving-Counterintuitive/dp/0062457713/) ([audible](https://www.audible.com/pd/The-Subtle-Art-of-Not-Giving-a-F-ck-Audiobook/B01I28NFEE))
+  * [My new journaling routine for 2020 using Shortcuts on iPad or iPhone](https://sliwinski.com/newjournal/)
+  * [How intermittent journaling and some smart Siri shortcuts help me enjoy more intentional and productive days](https://sliwinski.com/journaling/)
+  * [2019 review - a transition year...](https://sliwinski.com/2019/)
+  * [No Ironman - how I blew my dream because I was... late](https://sliwinski.com/noiron/)
+  * [Annual Review Template](https://nozbe.how/nf9bi)
+  * [RunGap app](https://www.rungap.com/)
+  * [luftdaten](https://luftdaten.info/)
+  * [ZACS - Zero Abstraction Cost Styling](https://github.com/Nozbe/zacs)
+  * [Best Year Ever course](https://bestyearever.me/course/?utm_source=direct)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/198
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
