--- a/en/_posts/2020-02-19-thepodcast-200.md
+++ b/en/_posts/2020-02-19-thepodcast-200.md
@@ -23,16 +23,51 @@ Last week on [The Podcast][p] we celebrated the 200th episode - and to commemora
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/200
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Table of content](https://thepodcast.fm/toc)
+  * [184: Digital Minimalism](https://thepodcast.fm/episodes/184)
+  * [168: Get bored](https://thepodcast.fm/episodes/168)
+  * [32: Why We Get Fat](https://thepodcast.fm/episodes/32)
+  * [87: Sleep Smarter](https://thepodcast.fm/episodes/87)
+  * [146: Magic of Tidying Up](https://thepodcast.fm/146)
+  * [162: Backpack Only](https://thepodcast.fm/episodes/162)
+  * [114: Panamá](https://thepodcast.fm/episodes/114)
+  * [195: Gadgets, with love](https://thepodcast.fm/episodes/195)
+  * [170: Live Intentionally](https://thepodcast.fm/episodes/170) - ultimate guide to annual review
+  * [128: Values](https://thepodcast.fm/episodes/128)
+  * [139: First tasks first](https://thepodcast.fm/episodes/139)
+  * [46: Deep Work](https://thepodcast.fm/episodes/46)
+  * [60: TGIF](https://thepodcast.fm/episodes/60)
+  * [70: People want to work](https://thepodcast.fm/episodes/70)
+  * [102: iPad Only](https://thepodcast.fm/episodes/102) ([iPadOnly book)](https://www.amazon.com/iPadOnly-first-post-PC-everything-between-ebook/dp/B00DVETZW6)
+  * [108: iPad Consultations](https://thepodcast.fm/episodes/108)
+  * [118: More Than Good Enough](https://thepodcast.fm/episodes/118)
+  * [166: Talk about size](https://thepodcast.fm/episodes/166)
+  * [152: 3D Printing](https://thepodcast.fm/episodes/152)
+  * [80: Peak](https://thepodcast.fm/episodes/80)
+  * [81: Deliberate Practice](https://thepodcast.fm/episodes/81)
+  * [149: Profit First](https://thepodcast.fm/episodes/149)
+  * [148: Don’t spend it all](https://thepodcast.fm/episodes/148)
+  * [179: Punished by rewards](https://thepodcast.fm/episodes/179)
+  * [180: Childhood bribes](https://thepodcast.fm/episodes/180)
+  * [132: Reusable Rocketry](https://thepodcast.fm/132)
+  * [158: Sabbatical](https://thepodcast.fm/episodes/158)
+  * [145: Don't say that](https://thepodcast.fm/episodes/145)
+  * [196: Hands are dirty (cnc milling)](https://thepodcast.fm/episodes/196)
+  * [137: Nomadic Lifestyle](https://thepodcast.fm/episodes/137)
+  * [165: Let’s fix it!](https://thepodcast.fm/episodes/165)
+  * [65: Request for comments](https://thepodcast.fm/episodes/65)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/200
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
