--- a/en/_posts/2020-02-28-thepodcast-201.md
+++ b/en/_posts/2020-02-28-thepodcast-201.md
@@ -21,16 +21,24 @@ This week on [The Podcast][p] we have an explicit episode because the books that
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/201
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Subtle Art of Not Giving a F*ck](https://www.amazon.com/Subtle-Art-Not-Giving-Counterintuitive/dp/B01I29Y344/) ([audible](https://www.audible.com/pd/The-Subtle-Art-of-Not-Giving-a-F-ck-Audiobook/B01I28NFEE))
+  * [F--k It: The Ultimate Spiritual Way](https://www.amazon.com/F-k-Ultimate-Spiritual-Way/dp/B00IFI7DP4/) ([audible](https://www.audible.com/pd/F-k-It-Audiobook/B00IFLFF2Y))
+  * [A Guide to the Good Life](https://www.amazon.com/Guide-Good-Life-Ancient-Stoic/dp/0195374614/) ([audible](https://www.audible.com/pd/A-Guide-to-the-Good-Life-Audiobook/B00G6ZLMDC))
+  * [🏭 Nozbe will not take any outside investment... nor will we build an office...](https://sliwinski.com/investors/)
+  * [The Podcast 129: Letting go](https://thepodcast.fm/episodes/129)
+  * [(In Polish) Radykalny sposób na maile, czyli inbox zero dla zapracowanych](https://imagazine.pl/2019/12/15/radykalny-sposob-na-maile-czyli-inbox-zero-dla-zapracowanych/)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/201
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
