--- a/en/_posts/2020-03-13-thepodcast-202.md
+++ b/en/_posts/2020-03-13-thepodcast-202.md
@@ -5,7 +5,7 @@ img: "thepodcast-202.jpg"
 
 # The Podcast #202 - The Machine That Changed The World
 
-Last week on [The Podcast][p] we discussed lean manufacturing and three books related to it: “The Machine that changed the world” ([Amazon](https://www.amazon.com/dp/0743299795?tag=sliwinski-20)|[Audible](https://www.audible.com/pd/B079K5SMD9?tag=sliwinski-20)) , “2-second lean” ([Amazon](https://www.amazon.com/dp/0984662286?tag=sliwinski-20)|[Audible](https://www.audible.com/pd/B00TI2822O?tag=sliwinski-20)) and “Lean thinking” ([Amazon](https://www.amazon.com/dp/0743249275?tag=sliwinski-20)|[Audible](https://www.audible.com/pd/B002UZDVUY?tag=sliwinski-20)) ... and why these ideas are still applicable to us:
+Last week on [The Podcast][p] we discussed lean manufacturing and three books related to it: “The Machine that changed the world” ([Amazon](https://www.amazon.com/dp/0743299795?tag=sliwinski-20), [Audible](https://www.audible.com/pd/B079K5SMD9?tag=sliwinski-20)) , “2-second lean” ([Amazon](https://www.amazon.com/dp/0984662286?tag=sliwinski-20), [Audible](https://www.audible.com/pd/B00TI2822O?tag=sliwinski-20)) and “Lean thinking” ([Amazon](https://www.amazon.com/dp/0743249275?tag=sliwinski-20), [Audible](https://www.audible.com/pd/B002UZDVUY?tag=sliwinski-20)) ... and why these ideas are still applicable to us:
 
 <!--More-->
 
@@ -21,16 +21,24 @@ Last week on [The Podcast][p] we discussed lean manufacturing and three books re
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/202
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Toyota Way to Lean Leadership](https://www.amazon.com/Toyota-Way-Lean-Leadership-Development/dp/B0069GLFKI/) ([audible](https://www.audible.com/pd/The-Toyota-Way-to-Lean-Leadership-Audiobook/B0064SC762))
+  * [The Machine That Changed the World](https://www.amazon.com/Machine-That-Changed-World-Revolutionizing/dp/0743299795/) ([audible](https://www.audible.com/pd/The-Machine-That-Changed-the-World-Audiobook/B079K5SMD9))
+  * [2 Second Lean](https://www.amazon.com/Second-Lean-People-Build-Culture-ebook/dp/B006E8P73W/) ([audible](https://www.audible.com/pd/2-Second-Lean-Audiobook/B00TI2822O))
+  * [Paul Akers (Author of "2 Second Lean") Youtube channel](https://www.youtube.com/user/PaulaAkers)
+  * [FastCap Youtube channel](https://www.youtube.com/channel/UCU0OXtC1xSvZsIiLBdQopaA)
+  * [Lean Thinking](https://www.amazon.com/Lean-Thinking-Corporation-Revised-Updated/dp/0743249275/) ([audible](https://www.audible.com/pd/Lean-Thinking-Audiobook/B002UZDVUY))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/202
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
