--- a/en/_posts/2020-04-18-thepodcast-206.md
+++ b/en/_posts/2020-04-18-thepodcast-206.md
@@ -21,16 +21,33 @@ This week on [The Podcast][p] we discussed how my co-host turned from software e
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/206
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Podcast 152: Power to the people](https://thepodcast.fm/episodes/152)
+  * [The Podcast 196: Hands Are Dirty](https://thepodcast.fm/episodes/196)
+  * [The Podcast 202: The Machine That Changed The World](https://thepodcast.fm/episodes/202)
+  * [The Podcast 203: Lean at Nozbe](https://thepodcast.fm/episodes/203)
+  * [The Podcast 204: Core Hours](https://thepodcast.fm/episodes/204)
+  * [The Podcast 205: Chat about: kaizen & performance](https://thepodcast.fm/episodes/205)
+  * [Josef Prusa on Twitter](https://twitter.com/josefprusa)
+  * [Warsaw Hackerspace](https://hackerspace.pl/)
+  * [Hackerspace Twitter](https://twitter.com/hackerspacepl)
+  * [Hackerspace face shield order form](https://covid.hackerspace.pl/)
+  * [more info about the face shield project](https://wiki.hackerspace.pl/projects:covid-19)
+  * [Injection Molding explainer](https://www.youtube.com/watch?v=RMjtmsr3CqA)
+  * [Die cutting machine being fast](https://www.youtube.com/watch?v=IqsXVxEXIgo)
+  * [Radek’s 5s/cycle on a die cutter](https://twitter.com/hackerspacepl/status/1248240806902870016)
+  * [Announcement by Wadim Plast, Hackerspace’s injection molding partner](https://www.wadim.com.pl/pl/a/przylbice)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/206
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
