--- a/en/_posts/2020-05-29-thepodcast-207.md
+++ b/en/_posts/2020-05-29-thepodcast-207.md
@@ -1,6 +1,6 @@
 ---
 tags: [podcast]
-img: "thepodcast-207.png"
+img: "thepodcast-207.jpg"
 ---
 
 # The Podcast #207 - Competition Gossip Corner
@@ -21,16 +21,24 @@ This week on [The Podcast][p] we are gossiping we’re talking about our favorit
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/207
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Basecamp](https://basecamp.com/)
+  * [Nozbe Personal](https://nozbe.com/personal)
+  * [Nozbe Teams](https://nozbe.com/)
+  * [Marking the end of pixel trackers in Basecamp emails](https://m.signalvnoise.com/marking-the-end-of-pixel-trackers-in-basecamp-emails/)
+  * [6 years ago we went all-in on Basecamp... [tweet]](https://twitter.com/jasonfried/status/1225455247264550917?lang=en)
+  * [Another free idea for email clients wishing to protect user’s privacy... [tweet]](https://twitter.com/dhh/status/1146705628305461249)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/207
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
