--- a/en/_posts/2018-11-05-thepodcast-161.md
+++ b/en/_posts/2018-11-05-thepodcast-161.md
@@ -25,16 +25,24 @@ Time: ~ 49 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/161
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Mobiconf](https://2018.mobiconf.org/)
+  * [Michael Śliwiński (Nozbe): No Office... | infoShare 2018](https://www.youtube.com/watch?v=3NNZu5xepe4)
+  * [Nomatic Backpacks](https://www.nomatic.com/pages/nomatic-backpack)
+  * [My Company’s Pyramid Of Communication Revisited](https://sliwinski.com/pyramid/)
+  * [“Bo czemu nie?” podcast](https://boczemunie.pl/)
 
-[pm]: http://productivemag.com/
+
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/161
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
