--- a/en/_posts/2018-11-09-thepodcast-163.md
+++ b/en/_posts/2018-11-09-thepodcast-163.md
@@ -25,16 +25,28 @@ Time: ~ 36 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/163
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Podcast 146: Magic of Tidying Up](https://thepodcast.fm/episodes/146)
+  * [The Podcast 160: Building with hammers](https://thepodcast.fm/episodes/160) \- about home renovation
+  * [The Podcast 162: Backpack Only](https://thepodcast.fm/episodes/162)
+  * [The Podcast 158: Sabbatical](https://thepodcast.fm/episodes/158)
+  * [Nozbe YouTube channel](https://www.youtube.com/user/NozbeCom?sub_confirmation=1)
+  * [The Minimalists](https://www.theminimalists.com/)
+  * [Anker 60W charger with USB-C and 4 more USB ports](https://www.amazon.com/Charger-Anker-Premium-Desktop-Delivery/dp/B072K5ZJXF/)
+  * [Mujjo](https://www.mujjo.com/)
+  * [Grafio app](http://tentouchapps.com/grafio/)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/163
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
+
