--- a/en/_posts/2018-12-14-thepodcast-169.md
+++ b/en/_posts/2018-12-14-thepodcast-169.md
@@ -7,8 +7,6 @@ vid: "UIW1B_1IXBE"
 
 This week on [The Podcast][p] we discuss the phenomenon of “bullshit jobs” - and more precise - we discuss the book by David Graeber and what it means to us... and it’s a good one - so make sure to check it out. (And to tease you more about the show, we’ve prepared this video teaser below - check it out before you listen to the whole show).
 
-## Watch the video teaser:
-
 {% include video.html id=page.vid %}
 
 <!--More-->
@@ -27,16 +25,23 @@ Time: ~ 47 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/169
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Bullshit Jobs: A Theory](https://www.amazon.com/Bullshit-Jobs-Theory-David-Graeber/dp/150114331X/) ([audible](https://www.audible.com/pd/Bullshit-Jobs-Audiobook/B079YY41HL))
+  * [The Podcast 164: Why we do what we do](https://thepodcast.fm/episodes/164)
+  * [Calendly](https://calendly.com/)
+  * [radex.io/books/bullshit-jobs/](http://radex.io/books/bullshit-jobs/)
+  * [SpaceX CRS-16 First Stage Water Landing](https://www.youtube.com/watch?v=5p1SDaXRaWY)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/169
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
