--- a/en/_posts/2019-01-16-thepodcast-172.md
+++ b/en/_posts/2019-01-16-thepodcast-172.md
@@ -25,16 +25,27 @@ Time: ~ 44 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/172
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [It Doesn’t Have to Be Crazy at Work](https://www.amazon.com/Doesnt-Have-Be-Crazy-Work/dp/B07GB94ZGB/) ([audible](https://www.audible.com/pd/It-Doesnt-Have-to-Be-Crazy-at-Work-Audiobook/0008323461))
+  * [Basecamp](https://basecamp.com/)
+  * [David Heinemeier Hansson on Twitter](https://twitter.com/dhh)
+  * [Jason Fried on Twitter](https://twitter.com/jasonfried)
+  * [English Dictionary For The F word](https://www.youtube.com/watch?v=yKPmIUGUX54)
+  * [Nozbe Reunion playlist (Nozbe People!)](https://www.youtube.com/watch?v=4_zSdmnfJrI&list=PL4VGcOPPsP4Oo4U07VkEJ4oZ8TzZqO5Sy)
+  * [Rework Podcast 032: Happy Pacifists](https://rework.fm/happy-pacifists/)
+  * [The Podcast 103: Stoicism](https://thepodcast.fm/103) ([part 2](https://thepodcast.fm/104))
+  * [Calendly](https://calendly.com/)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/172
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
