--- a/en/_posts/2019-01-24-thepodcast-173.md
+++ b/en/_posts/2019-01-24-thepodcast-173.md
@@ -25,16 +25,25 @@ Time: ~ 35 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/173
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Chain React: The React Native Conference - Infinite Red](https://infinite.red/ChainReactConf)
+  * [watermelonDB](https://github.com/Nozbe/WatermelonDB)
+  * [Thingiverse / Radex](https://www.thingiverse.com/radexp/designs)
+  * [The Podcast 47: Quit social media](https://thepodcast.fm/episodes/47)
+  * [The Podcast 105: Twitter detox](https://thepodcast.fm/105)
+  * [The Podcast 106: Combined Twitter&Instagram Moment](https://thepodcast.fm/106)
+  * [The Podcast 168: Get bored](https://thepodcast.fm/episodes/168)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/173
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
