--- a/en/_posts/2019-02-01-thepodcast-174.md
+++ b/en/_posts/2019-02-01-thepodcast-174.md
@@ -25,16 +25,27 @@ Time: ~ 52 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/174
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The history of Nozbe](https://nozbe.com/blog/10-years/)
+  * [Nozbe 4 is coming soon!](https://nozbe4.com/)
+  * [Digg](http://digg.com/)
+  * [Steve Jobs Introducing The iPhone At MacWorld 2007](https://www.youtube.com/watch?v=x7qPAY9JqE4)
+  * [GitHub](https://github.com/)
+  * [macoscope](http://macoscope.com/)
+  * [Wunderlist](https://www.wunderlist.com/)
+  * [Titanium](http://titanium.cs.berkeley.edu/)
+  * [Tadam app](https://tadamapp.com/)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/174
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
