--- a/en/_posts/2019-02-10-thepodcast-175.md
+++ b/en/_posts/2019-02-10-thepodcast-175.md
@@ -25,16 +25,37 @@ Time: ~ 38 minutes
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/175
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Podcast 168: Get bored](https://thepodcast.fm/episodes/168)
+  * [Hacker News](https://news.ycombinator.com/)
+  * [TGIF - Nozbe team’s attempt at working less, but better](https://nozbe.com/blog/friday/)
+  * [How to Use App Limits and Downtime in iOS 12](https://www.igeeksblog.com/how-to-use-app-limits-and-downtime-in-ios-12/)
+  * [Zapier](https://zapier.com/)
+  * [Nozbe Help Page](https://help.nozbe.com/)
+  * [Reeder](http://reederapp.com/)
+  * [1blocker X](https://backstage.1blocker.com/say-hello-to-1blocker-x-8b55efe1ae36)
+  * [FOMO](https://en.wikipedia.org/wiki/Fear_of_missing_out)
+  * [SelfControl](https://selfcontrolapp.com/)
+  * [radex.io/instagram.html](http://radex.io/instagram.html)
+  * [Bear](https://bear.app/)
+  * [“Plan today” script](https://www.icloud.com/shortcuts/bffb26d3a9d54148a5f3d21eb9d8065d)
+  * [“Plan tomorrow” script](https://www.icloud.com/shortcuts/e94d99dc94524f1d9452194fc897eeee)
+  * [Productive app](http://productiveapp.io/)
+  * [Scott Manley on Youtube](https://www.youtube.com/channel/UCxzC4EngIsMrPmbm6Nxvb-A)
+  * [Main Engine Cut Off Podcast](https://mainenginecutoff.com/podcast)
+  * [The Orbital Mechanics Podcast](https://theorbitalmechanics.com/)
+  * [The Podcast 85: Magic Spreadsheet](https://thepodcast.fm/episodes/85)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/175
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
