--- a/en/_posts/2019-02-21-thepodcast-176.md
+++ b/en/_posts/2019-02-21-thepodcast-176.md
@@ -25,16 +25,24 @@ Watch this short teaser and listen to this episode below:
 
 And if you're new here:
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/176
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [The Podcast 172: It doesn’t have to be crazy at work](https://thepodcast.fm/episodes/172)
+  * [Basecamp](https://basecamp.com/)
+  * [It Doesn’t Have to Be Crazy at Work](https://www.amazon.com/Doesnt-Have-Be-Crazy-Work/dp/B07GB94ZGB/) ([audible](https://www.audible.com/pd/It-Doesnt-Have-to-Be-Crazy-at-Work-Audiobook/0008323461))
+  * [Slideshare presentation about salary formula](https://www.slideshare.net/karolsarnacki/salary-formula-a-way-through-the-minefield)
+  * [Buffer](https://buffer.com/)
+  * [The Podcast 76: Management by walking around](https://thepodcast.fm/episodes/76)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/176
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
