--- a/en/_posts/2019-03-22-thepodcast-179.md
+++ b/en/_posts/2019-03-22-thepodcast-179.md
@@ -7,7 +7,7 @@ vid: "VjYadUiWsiY"
 
 Last week on [The Podcast][p] we discussed the book by Alfie Kohn, “Punished by Rewards” and the consequences of both punishment and praise... I encourage you to check the discussion out - this book is literally one of the most impactful books I’ve read in a while.
 
-Watch this short teaser and listen to the entire episode below:
+Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +23,19 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/179
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Punished by Rewards](https://www.amazon.com/Punished-Rewards-Trouble-Incentive-Praise/dp/0618001816) ([audible](https://www.audible.com.au/pd/Punished-by-Rewards-Audiobook/B073KJDCTX))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/179
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
