--- a/en/_posts/2019-04-03-thepodcast-181.md
+++ b/en/_posts/2019-04-03-thepodcast-181.md
@@ -7,7 +7,7 @@ vid: "BuDaae9nOW8"
 
 Tomorrow we‘re shipping the „beta preview“ of the future of my company. The future of [Nozbe][n]... the [Nozbe 4](https://Nozbe4.com) and in this episode of [The Podcast][p] we discuss the „when“ - how we came up with the deadline of 4/4 and how our development process of Nozbe 4 came to be.
 
-Watch this short teaser and listen to the entire episode below:
+Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +23,24 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/181
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Nozbe 4](https://nozbe4.com/)
+  * [Joel Spolsky](https://www.joelonsoftware.com/)
+  * [REWRITE!](https://businessofsoftware.org/2015/10/david-heinemeier-hansson-rewrite-basecamp-business-of-software-conference-video-dhh-bos2015/)
+  * [David Heinemeier Hansson](https://twitter.com/dhh)
+  * [How to Deliver on Deadline](https://michaelhyatt.com/how-to-deliver-on-deadline/)
+  * [The Courage to Be Disliked](https://www.amazon.com/Courage-Be-Disliked-Yourself-Happiness/dp/B07BRPW98K/) ([audible](https://www.audible.com/pd/The-Courage-to-Be-Disliked-Audiobook/B07BRPQ8LW))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/181
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
