--- a/en/_posts/2019-04-30-thepodcast-184.md
+++ b/en/_posts/2019-04-30-thepodcast-184.md
@@ -5,9 +5,9 @@ vid: "TwRweSu8Sbg"
 
 # The Podcast #184 - Digital Minimalism
 
-Lasy week on [The Podcast][p] we discussed the book Digital Minimalism by Cal Newport ([Amazon](https://www.amazon.com/dp/0241341132?tag=sliwinski-20) or [Audible](https://www.audible.com/pd/0241387779?tag=sliwinski-20)) and Radek challenged me to [drop social media for a month](/sms/).
+Lasy week on [The Podcast][p] we discussed the book Digital Minimalism by Cal Newport ([Amazon](https://www.amazon.com/dp/0241341132?tag=sliwinski-20), [Audible](https://www.audible.com/pd/0241387779?tag=sliwinski-20)) and Radek challenged me to [drop social media for a month](https://sliwinski.com/sms).
 
-Watch this short teaser and listen to the entire episode below:
+Watch this short teaser and listen to this episode below:
 
 {% include video.html id=page.vid %}
 
@@ -23,16 +23,28 @@ Watch this short teaser and listen to the entire episode below:
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/184
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Digital Minimalism](https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/B07LGDY5PC/) ([audible](https://www.audible.com/pd/Digital-Minimalism-Audiobook/B07LGF8TCJ))
+  * [Linea app](https://linea-app.com/)
+  * [Cal Newport on TED](https://m.youtube.com/watch?v=3E7hkPZ-HTk)
+  * [Bugatti Chiron LEGO](https://shop.lego.com/en-US/product/Bugatti-Chiron-42083)
+  * Past episodes related with topic of digital minimalism:
+    * [The Podcast 47: Quit social media](https://thepodcast.fm/episodes/47)
+    * [The Podcast 105: Twitter detox](https://thepodcast.fm/105)
+    * [The Podcast 106: Combined Twitter&Instagram Moment](https://thepodcast.fm/106)
+    * [The Podcast 168: Get bored](https://thepodcast.fm/episodes/168)
+    * [The Podcast 175: 100% Buzz-Free](https://thepodcast.fm/episodes/175)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/184
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
