--- a/en/_posts/2020-01-10-thepodcast-197.md
+++ b/en/_posts/2020-01-10-thepodcast-197.md
@@ -21,16 +21,21 @@ This week on [The Podcast][p] we discuss a concept of “horizontal responsibili
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/197
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Holacracy: The New Management System for a Rapidly Changing World](https://www.amazon.com/Holacracy-Management-System-Rapidly-Changing/dp/B00WEWIZYK/) ([audible](https://www.audible.com/pd/Holacracy-Audiobook/B00WFP47MK))
+  * [Holacracy: A Radical New Approach to Management | Brian Robertson](https://www.youtube.com/watch?v=tJxfJGo-vkI)
+  * [Brian J. Robertson: "Holacracy" with Bonus Q&A | Talks at Google](https://www.youtube.com/watch?v=zGLJRpAKS6E)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/197
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
