--- a/en/_posts/2020-03-14-thepodcast-203.md
+++ b/en/_posts/2020-03-14-thepodcast-203.md
@@ -21,16 +21,44 @@ This week on [The Podcast][p] we discuss how we’re implementing lean ideas fro
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/203
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+How we apply Lean philosophy to the Nozbe Teams development process:
 
-[pm]: http://productivemag.com/
+  * Weekly release train
+  * Phased releases
+  * One-day pull requests
+  * CI/CD
+  * Asynchronous testing
+  * Feature flags
+  * Bug fixing Mondays
+  * Dev responsibilities
+  * Roadmap Rangers
+  * Time scoping
+  * Kaizen in customer support
+  * Text daily standups
+  * Kaizen math
+
+## Links:
+
+  * [The Podcast 202: The Machine That Changed The World](https://thepodcast.fm/episodes/202)
+  * [37signals](https://37signals.com/)
+  * [The Podcast 197: Horizontal Responsibilities](https://thepodcast.fm/episodes/197)
+  * [Shape Up: Stop Running in Circles and Ship Work that Matters](https://basecamp.com/shapeup)
+  * [The Toyota Way to Lean Leadership](https://www.amazon.com/Toyota-Way-Lean-Leadership-Development/dp/B0069GLFKI/) ([audible](https://www.audible.com/pd/The-Toyota-Way-to-Lean-Leadership-Audiobook/B0064SC762))
+  * [The Machine That Changed the World](https://www.amazon.com/Machine-That-Changed-World-Revolutionizing/dp/0743299795/) ([audible](https://www.audible.com/pd/The-Machine-That-Changed-the-World-Audiobook/B079K5SMD9))
+  * [2 Second Lean](https://www.amazon.com/Second-Lean-People-Build-Culture-ebook/dp/B006E8P73W/) ([audible](https://www.audible.com/pd/2-Second-Lean-Audiobook/B00TI2822O))
+  * [Lean Thinking](https://www.amazon.com/Lean-Thinking-Corporation-Revised-Updated/dp/0743249275/) ([audible](https://www.audible.com/pd/Lean-Thinking-Audiobook/B002UZDVUY))
+
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/203
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
