--- a/en/_posts/2020-03-27-thepodcast-204.md
+++ b/en/_posts/2020-03-27-thepodcast-204.md
@@ -21,16 +21,29 @@ This week on [The Podcast][p] we discuss my latest invention - CORE HOURS -  a c
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/204
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [Getting Things Done](https://www.amazon.com/Getting-Things-Done-Stress-Free-Productivity/dp/B01B6WSK5C/) ([audible](https://www.audible.com/pd/Getting-Things-Done-Audiobook/B01B6WSMHI))
+  * [“It’s just 2 minutes!… and it’s a lot of time!”](https://sliwinski.com/its-just-2-minutes-and-its-a-lot-of-time/)
+  * [The new 2 hour rule - stop procrastinating and get your scariest tasks done!](https://sliwinski.com/2hours/)
+  * [Essentialism: The Disciplined Pursuit of Less](https://www.amazon.com/Essentialism-Disciplined-Pursuit-Less/dp/B00IWYP5NI) ([audible](https://www.audible.com/pd/Essentialism-Audiobook/B00IWZ6XGA))
+  * [The ONE Thing](https://www.amazon.com/ONE-Thing-Surprisingly-Extraordinary-Results/dp/1885167776/) ([audible](https://www.audible.com/pd/The-ONE-Thing-Audiobook/B00FPMTCGQ))
+  * [The Podcast 203: Lean at Nozbe](https://thepodcast.fm/episodes/203)
+  * Episodes with annual reviews
+    * [170: Live intentionally](https://thepodcast.fm/episodes/170)
+    * [171: 2018 in Review](https://thepodcast.fm/episodes/171)
+    * [198: 2019 in Review](https://thepodcast.fm/episodes/198)
+  * [Nozbe Security - Bug Bounty](https://nozbe.com/bug-bounty)
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/204
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
