--- a/en/_posts/2020-04-06-thepodcast-205.md
+++ b/en/_posts/2020-04-06-thepodcast-205.md
@@ -21,16 +21,28 @@ Last week on [The Podcast][p] we had a discussion like no other - we tried a dif
 
 *If you liked it, please [rate us on Apple Podcasts][i], thanks!*
 
-*The Podcast is a weekly podcast chat with [Radek][r] (VP Apple Technologies at [Nozbe][n]) and yours truly (CEO at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
+*The Podcast is a weekly podcast chat with [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/tag/productivity), [business](/tag/business), [books](/tag/books), and whatever else comes to mind… - if you liked this episode, make sure to [check out past episodes](/tag/podcast).*
 
-[y]: https://www.youtube.com/channel/UCkWk8xKe3pq_87io7CXBCgQ
-[rss]: https://thepodcast.fm/episodes?format=RSS
-[e]: https://thepodcast.fm/episodes/205
+## Show notes for this episode:
 
-[p]: https://thepodcast.fm/
-[n]: https://nozbe.com/
-[r]: https://radex.io/
-[i]: https://itunes.apple.com/podcast/the-podcast/id1012329770
-[o]: https://ipadonly.com
+  * [2 Second Lean](https://www.amazon.com/Second-Lean-People-Build-Culture-ebook/dp/B006E8P73W/) ([audible](https://www.audible.com/pd/2-Second-Lean-Audiobook/B00TI2822O))
+  * [Michael on Youtube](https://www.youtube.com/user/NozbeCom?sub_confirmation=1)
+  * ‎[Home Design 3D](https://apps.apple.com/us/app/home-design-3d/id463768717)
+  * [The Podcast 203: Lean at Nozbe](https://thepodcast.fm/episodes/203)
+  * [The Podcast 204: Core Hours](https://thepodcast.fm/episodes/204)
+  * [Project LightSpeed: Rewriting the Messenger codebase for a faster, smaller, and simpler messaging app](https://engineering.fb.com/data-infrastructure/messenger/)
+  * [DHH on Twitter](https://twitter.com/dhh)
+  * [The Toyota Way to Lean Leadership](https://www.amazon.com/Toyota-Way-Lean-Leadership-Development/dp/B0069GLFKI/) ([audible](https://www.audible.com/pd/The-Toyota-Way-to-Lean-Leadership-Audiobook/B0064SC762))
+  * [The Machine That Changed the World](https://www.amazon.com/Machine-That-Changed-World-Revolutionizing/dp/0743299795/) ([audible](https://www.audible.com/pd/The-Machine-That-Changed-the-World-Audiobook/B079K5SMD9))
+  * [Lean Thinking](https://www.amazon.com/Lean-Thinking-Corporation-Revised-Updated/dp/0743249275/) ([audible](https://www.audible.com/pd/Lean-Thinking-Audiobook/B002UZDVUY))
 
-[pm]: http://productivemag.com/
+[y]: https://michael.gratis/thepodcastyt
+[rss]: http://thepodcast.fm/episodes?format=RSS
+[e]: http://thepodcast.fm/episodes/205
+
+[p]: https://michael.gratis/thepodcastfm
+[n]: https://michael.gratis/nozbe
+[r]: https://michael.gratis/radex
+[i]: https://michael.gratis/thepodcast
+[o]: https://michael.gratis/ipadonly
+
